[gd_scene load_steps=5 format=3 uid="uid://b3ac8otsob02y"]

[ext_resource type="Script" uid="uid://4x6iqjp2gjam" path="res://scripts/weekend/weekend_character_event_card.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://bvajolaqfxyil" path="res://assets/workday_new/ui/events/random_undo.png" id="2_background"]
[ext_resource type="FontFile" uid="uid://cdja3eosvd0mn" path="res://assets/font/LEEEAFHEI-REGULAR.TTF" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.95, 0.95, 0.95, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="WeekendCharacterEventCard" type="PanelContainer"]
custom_minimum_size = Vector2(240, 140)
offset_right = 240.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_script")
region_height = 0.33
background_color = Color(1, 0.945098, 0.854902, 0)

[node name="CardContent" type="Control" parent="."]
layout_mode = 2

[node name="BackgroundImage" type="TextureRect" parent="CardContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_background")
expand_mode = 1
stretch_mode = 5

[node name="EventCharacterPortrait" type="TextureRect" parent="CardContent"]
layout_mode = 0
offset_left = 91.0
offset_top = -6.0
offset_right = 185.0
offset_bottom = 74.0
expand_mode = 1
stretch_mode = 5

[node name="EventTitle" type="Label" parent="CardContent"]
layout_mode = 0
offset_left = 11.0
offset_top = 36.0
offset_right = 165.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(1, 0.988235, 0.937255, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 25
text = "事件标题"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="EventPerson" type="Label" parent="CardContent"]
layout_mode = 0
offset_left = 10.0
offset_top = 76.0
offset_right = 164.0
offset_bottom = 101.0
theme_override_colors/font_color = Color(1, 0.988235, 0.937255, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 20
text = "相关人物"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="RoundInfo" type="Label" parent="CardContent"]
layout_mode = 0
offset_left = 165.0
offset_top = 34.0
offset_right = 228.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(1, 0.988235, 0.937255, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 25
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
